# Aiolos

./: .gitignore  README.md
Aiolos/: CMakeLists.txt  main.cpp  strip_library.sh
Aiolos/include/: BasicFunctions.h  GLCM.h  Scheme1.h  Scheme2.h  Scheme3.h  Standard.h
Aiolos/include/impl/: Definitions.h  Distribution.h  Enumerations.h  Scheme1.h  Scheme2.h  Scheme3.h  Standard.h
Aiolos/include/implementations/: Scheme1.h  Scheme2.h  Scheme3.h  Standard.h
Aiolos/include/util/: BasicFunctions.h  MatrixFunctions.h  VectorFunctions.h  VectorMath.h  VisualizationHelper.h
Aiolos/src/: GLCM.cpp
Aiolos/src/util/: MatrixFunctions.cpp
Aiolos/tests/: benchmark.main_angle.cpp  benchmark.main_angles.cpp  keyframes.main_angle.cpp  keyframes.main_angle_range_.cpp
scripts/: edit_videos.sh  strip_library.sh
test_images/: edit_videos.sh
